// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFieldset demo examples basic 1`] = `
.glamor-15,
[data-glamor-15] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  border: 1px solid transparent;
  border-top-color: #c8d1e0;
  padding: 0;
}

.glamor-15 *,
[data-glamor-15] *,
.glamor-15 *::before,
[data-glamor-15] *::before,
.glamor-15 *::after,
[data-glamor-15] *::after {
  box-sizing: inherit;
}

.glamor-15 > legend,
[data-glamor-15] > legend {
  color: #333840;
  font-size: 0.875em;
  font-weight: 700;
  line-height: 2em;
  padding: 0;
  padding-right: 0.5em;
}

.glamor-6,
[data-glamor-6] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
}

.glamor-6 *,
[data-glamor-6] *,
.glamor-6 *::before,
[data-glamor-6] *::before,
.glamor-6 *::after,
[data-glamor-6] *::after {
  box-sizing: inherit;
}

.glamor-0,
[data-glamor-0] {
  color: #58606e;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  font-size: 0.875em;
  font-weight: 600;
  justify-content: space-between;
  margin-bottom: 0.5em;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.glamor-0 > *,
[data-glamor-0] > * {
  align-self: flex-end;
  display: inline-block;
  -webkit-align-self: flex-end;
}

.glamor-4,
[data-glamor-4] {
  align-items: center;
  cursor: text;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 100%;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-4 [role="img"],
[data-glamor-4] [role="img"] {
  display: block;
  fill: #c8d1e0;
  flex: 0 0 auto;
  margin: 0 0.5em;
  -webkit-flex: 0 0 auto;
}

.glamor-4 [role="img"]:last-of-type,
[data-glamor-4] [role="img"]:last-of-type {
  fill: #c8d1e0;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  position: relative;
  z-index: 1;
  align-items: center;
  cursor: text;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 100%;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

.glamor-3:hover > div:last-child,
[data-glamor-3]:hover > div:last-child,
.glamor-3[data-simulate-hover] > div:last-child,
[data-glamor-3][data-simulate-hover] > div:last-child {
  border-color: #2e6fd9;
}

.glamor-3:focus > div:last-child,
[data-glamor-3]:focus > div:last-child,
.glamor-3[data-simulate-focus] > div:last-child,
[data-glamor-3][data-simulate-focus] > div:last-child {
  border-color: #c8d1e0;
  box-shadow: 0 0 0 1px #fff, 0 0 0 2px #2e6fd9;
}

.glamor-3:active > div:last-child,
[data-glamor-3]:active > div:last-child,
.glamor-3[data-simulate-active] > div:last-child,
[data-glamor-3][data-simulate-active] > div:last-child {
  border-color: #c8d1e0;
  box-shadow: 0 0 0 1px #fff, 0 0 0 2px #2e6fd9;
}

.glamor-3 [role="img"],
[data-glamor-3] [role="img"] {
  display: block;
  fill: #c8d1e0;
  flex: 0 0 auto;
  margin: 0 0.5em;
  -webkit-flex: 0 0 auto;
}

.glamor-3 [role="img"]:last-of-type,
[data-glamor-3] [role="img"]:last-of-type {
  fill: #c8d1e0;
}

.glamor-1,
[data-glamor-1] {
  background-color: transparent;
  border: 0;
  box-shadow: none;
  flex: 1 1 auto;
  font-family: inherit;
  min-width: 0;
  width: 100%;
  color: #58606e;
  font-size: 0.875em;
  height: 2.857142857142857em;
  outline: 0;
  padding-left: 1.1428571428571428em;
  padding-right: 1.1428571428571428em;
  -webkit-flex: 1 1 auto;
}

.glamor-1::placeholder,
[data-glamor-1]::placeholder,
.glamor-1[data-simulate-placeholder],
[data-glamor-1][data-simulate-placeholder] {
  color: #8e99ab;
  font-style: italic;
}

.glamor-1::-ms-input-placeholder,
[data-glamor-1]::-ms-input-placeholder,
.glamor-1[data-simulate-msinputplaceholder],
[data-glamor-1][data-simulate-msinputplaceholder] {
  color: #8e99ab;
  font-style: italic;
}

.glamor-1:-ms-input-placeholder,
[data-glamor-1]:-ms-input-placeholder,
.glamor-1[data-simulate-msinputplaceholder],
[data-glamor-1][data-simulate-msinputplaceholder] {
  color: #8e99ab;
  font-style: italic;
}

.glamor-1::-ms-clear,
[data-glamor-1]::-ms-clear,
.glamor-1[data-simulate-msclear],
[data-glamor-1][data-simulate-msclear] {
  display: none;
}

.glamor-1:focus ~ div:last-child,
[data-glamor-1]:focus ~ div:last-child,
.glamor-1[data-simulate-focus] ~ div:last-child,
[data-glamor-1][data-simulate-focus] ~ div:last-child {
  border-color: #c8d1e0;
  box-shadow: 0 0 0 1px #fff, 0 0 0 2px #2e6fd9;
}

.glamor-2,
[data-glamor-2] {
  background-color: #fff;
  border-color: #c8d1e0;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: -1;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "DemoLayout": [Function],
            "FormField": [Function],
            "FormFieldset": [Function],
            "TextInput": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <FormFieldset
              legend="Login"
            >
              <FormFieldset>
                <fieldset
                  className="glamor-15"
                >
                  <legend>
                    Login
                  </legend>
                  <glamorous(div)>
                    <div
                      className="glamor-14"
                    >
                      <FormField
                        label="Email"
                        requiredText="Required"
                      >
                        <FormField
                          className={undefined}
                        >
                          <div
                            className="glamor-6"
                          >
                            <label>
                              <glamorous(div)
                                hideLabel={undefined}
                                key="formField-1-textWrapper"
                              >
                                <div
                                  className="glamor-0"
                                >
                                  <span
                                    id="formField-1-labelText"
                                  >
                                    Email
                                  </span>
                                </div>
                              </glamorous(div)>
                              <TextInput
                                aria-describedby={undefined}
                                key="formField-1-control"
                                required={undefined}
                                rootProps={undefined}
                                type="email"
                                variant={undefined}
                              >
                                <TextInput
                                  className={undefined}
                                  control={[Function]}
                                  controlProps={
                                    Object {
                                      "aria-describedby": undefined,
                                      "aria-invalid": undefined,
                                      "aria-required": undefined,
                                      "controlRef": undefined,
                                      "disabled": undefined,
                                      "readOnly": undefined,
                                      "required": undefined,
                                      "type": "email",
                                    }
                                  }
                                  disabled={undefined}
                                  iconEnd={undefined}
                                  iconStart={undefined}
                                  prefix={undefined}
                                  readOnly={undefined}
                                  size="large"
                                  suffix={undefined}
                                  variant={undefined}
                                >
                                  <FauxControl
                                    className="glamor-4"
                                    control={[Function]}
                                    controlProps={
                                      Object {
                                        "aria-describedby": undefined,
                                        "aria-invalid": undefined,
                                        "aria-required": undefined,
                                        "controlRef": undefined,
                                        "disabled": undefined,
                                        "readOnly": undefined,
                                        "required": undefined,
                                        "type": "email",
                                      }
                                    }
                                    disabled={undefined}
                                    iconEnd={undefined}
                                    iconStart={undefined}
                                    prefix={undefined}
                                    readOnly={undefined}
                                    size="large"
                                    suffix={undefined}
                                    variant={undefined}
                                  >
                                    <FauxControl
                                      className="glamor-4"
                                      control={[Function]}
                                      disabled={undefined}
                                      innerRef={undefined}
                                      variant={undefined}
                                    >
                                      <div
                                        className="glamor-3"
                                      >
                                        <glamorous(glamorous(input))
                                          aria-describedby={undefined}
                                          aria-invalid={undefined}
                                          aria-required={undefined}
                                          controlPropsIn={
                                            Object {
                                              "aria-describedby": undefined,
                                              "aria-invalid": undefined,
                                              "aria-required": undefined,
                                              "controlRef": undefined,
                                              "disabled": undefined,
                                              "readOnly": undefined,
                                              "required": undefined,
                                              "type": "email",
                                            }
                                          }
                                          controlRef={undefined}
                                          disabled={undefined}
                                          iconEnd={undefined}
                                          iconStart={undefined}
                                          innerRef={undefined}
                                          key="control"
                                          prefix={undefined}
                                          readOnly={undefined}
                                          required={undefined}
                                          size="large"
                                          suffix={undefined}
                                          type="email"
                                          variant={undefined}
                                        >
                                          <input
                                            aria-describedby={undefined}
                                            aria-invalid={undefined}
                                            aria-required={undefined}
                                            className="glamor-1"
                                            disabled={undefined}
                                            prefix={undefined}
                                            readOnly={undefined}
                                            required={undefined}
                                            size="large"
                                            type="email"
                                          />
                                        </glamorous(glamorous(input))>
                                        <Underlay
                                          disabled={undefined}
                                          readOnly={undefined}
                                          variant={undefined}
                                        >
                                          <div
                                            className="glamor-2"
                                            readOnly={undefined}
                                          />
                                        </Underlay>
                                      </div>
                                    </FauxControl>
                                  </FauxControl>
                                </TextInput>
                              </TextInput>
                            </label>
                          </div>
                        </FormField>
                      </FormField>
                      <FormField
                        label="Password"
                        requiredText="Required"
                      >
                        <FormField
                          className={undefined}
                        >
                          <div
                            className="glamor-6"
                          >
                            <label>
                              <glamorous(div)
                                hideLabel={undefined}
                                key="formField-2-textWrapper"
                              >
                                <div
                                  className="glamor-0"
                                >
                                  <span
                                    id="formField-2-labelText"
                                  >
                                    Password
                                  </span>
                                </div>
                              </glamorous(div)>
                              <TextInput
                                aria-describedby={undefined}
                                key="formField-2-control"
                                required={undefined}
                                rootProps={undefined}
                                type="password"
                                variant={undefined}
                              >
                                <TextInput
                                  className={undefined}
                                  control={[Function]}
                                  controlProps={
                                    Object {
                                      "aria-describedby": undefined,
                                      "aria-invalid": undefined,
                                      "aria-required": undefined,
                                      "controlRef": undefined,
                                      "disabled": undefined,
                                      "readOnly": undefined,
                                      "required": undefined,
                                      "type": "password",
                                    }
                                  }
                                  disabled={undefined}
                                  iconEnd={undefined}
                                  iconStart={undefined}
                                  prefix={undefined}
                                  readOnly={undefined}
                                  size="large"
                                  suffix={undefined}
                                  variant={undefined}
                                >
                                  <FauxControl
                                    className="glamor-4"
                                    control={[Function]}
                                    controlProps={
                                      Object {
                                        "aria-describedby": undefined,
                                        "aria-invalid": undefined,
                                        "aria-required": undefined,
                                        "controlRef": undefined,
                                        "disabled": undefined,
                                        "readOnly": undefined,
                                        "required": undefined,
                                        "type": "password",
                                      }
                                    }
                                    disabled={undefined}
                                    iconEnd={undefined}
                                    iconStart={undefined}
                                    prefix={undefined}
                                    readOnly={undefined}
                                    size="large"
                                    suffix={undefined}
                                    variant={undefined}
                                  >
                                    <FauxControl
                                      className="glamor-4"
                                      control={[Function]}
                                      disabled={undefined}
                                      innerRef={undefined}
                                      variant={undefined}
                                    >
                                      <div
                                        className="glamor-3"
                                      >
                                        <glamorous(glamorous(input))
                                          aria-describedby={undefined}
                                          aria-invalid={undefined}
                                          aria-required={undefined}
                                          controlPropsIn={
                                            Object {
                                              "aria-describedby": undefined,
                                              "aria-invalid": undefined,
                                              "aria-required": undefined,
                                              "controlRef": undefined,
                                              "disabled": undefined,
                                              "readOnly": undefined,
                                              "required": undefined,
                                              "type": "password",
                                            }
                                          }
                                          controlRef={undefined}
                                          disabled={undefined}
                                          iconEnd={undefined}
                                          iconStart={undefined}
                                          innerRef={undefined}
                                          key="control"
                                          prefix={undefined}
                                          readOnly={undefined}
                                          required={undefined}
                                          size="large"
                                          suffix={undefined}
                                          type="password"
                                          variant={undefined}
                                        >
                                          <input
                                            aria-describedby={undefined}
                                            aria-invalid={undefined}
                                            aria-required={undefined}
                                            className="glamor-1"
                                            disabled={undefined}
                                            prefix={undefined}
                                            readOnly={undefined}
                                            required={undefined}
                                            size="large"
                                            type="password"
                                          />
                                        </glamorous(glamorous(input))>
                                        <Underlay
                                          disabled={undefined}
                                          readOnly={undefined}
                                          variant={undefined}
                                        >
                                          <div
                                            className="glamor-2"
                                            readOnly={undefined}
                                          />
                                        </Underlay>
                                      </div>
                                    </FauxControl>
                                  </FauxControl>
                                </TextInput>
                              </TextInput>
                            </label>
                          </div>
                        </FormField>
                      </FormField>
                    </div>
                  </glamorous(div)>
                </fieldset>
              </FormFieldset>
            </FormFieldset>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`FormFieldset demo examples disabled 1`] = `
.glamor-6,
[data-glamor-6] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
}

.glamor-6 *,
[data-glamor-6] *,
.glamor-6 *::before,
[data-glamor-6] *::before,
.glamor-6 *::after,
[data-glamor-6] *::after {
  box-sizing: inherit;
}

.glamor-0,
[data-glamor-0] {
  color: #58606e;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  font-size: 0.875em;
  font-weight: 600;
  justify-content: space-between;
  margin-bottom: 0.5em;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.glamor-0 > *,
[data-glamor-0] > * {
  align-self: flex-end;
  display: inline-block;
  -webkit-align-self: flex-end;
}

.glamor-4,
[data-glamor-4] {
  align-items: center;
  cursor: text;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 100%;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-4 [role="img"],
[data-glamor-4] [role="img"] {
  display: block;
  fill: #c8d1e0;
  flex: 0 0 auto;
  margin: 0 0.5em;
  -webkit-flex: 0 0 auto;
}

.glamor-4 [role="img"]:last-of-type,
[data-glamor-4] [role="img"]:last-of-type {
  fill: #c8d1e0;
}

.glamor-15,
[data-glamor-15] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  border: 1px solid transparent;
  border-top-color: #c8d1e0;
  padding: 0;
}

.glamor-15 *,
[data-glamor-15] *,
.glamor-15 *::before,
[data-glamor-15] *::before,
.glamor-15 *::after,
[data-glamor-15] *::after {
  box-sizing: inherit;
}

.glamor-15 > legend,
[data-glamor-15] > legend {
  color: #afbacc;
  font-size: 0.875em;
  font-weight: 700;
  line-height: 2em;
  padding: 0;
  padding-right: 0.5em;
}

.glamor-3,
[data-glamor-3] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  position: relative;
  z-index: 1;
  align-items: center;
  cursor: text;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 100%;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-3 *,
[data-glamor-3] *,
.glamor-3 *::before,
[data-glamor-3] *::before,
.glamor-3 *::after,
[data-glamor-3] *::after {
  box-sizing: inherit;
}

.glamor-3:active > div:last-child,
[data-glamor-3]:active > div:last-child,
.glamor-3[data-simulate-active] > div:last-child,
[data-glamor-3][data-simulate-active] > div:last-child {
  border-color: #c8d1e0;
  box-shadow: none;
}

.glamor-3 [role="img"],
[data-glamor-3] [role="img"] {
  display: block;
  fill: #c8d1e0;
  flex: 0 0 auto;
  margin: 0 0.5em;
  -webkit-flex: 0 0 auto;
}

.glamor-3 [role="img"]:last-of-type,
[data-glamor-3] [role="img"]:last-of-type {
  fill: #c8d1e0;
}

.glamor-1,
[data-glamor-1] {
  background-color: transparent;
  border: 0;
  box-shadow: none;
  flex: 1 1 auto;
  font-family: inherit;
  min-width: 0;
  width: 100%;
  color: #afbacc;
  font-size: 0.875em;
  height: 2.857142857142857em;
  outline: 0;
  padding-left: 1.1428571428571428em;
  padding-right: 1.1428571428571428em;
  -webkit-flex: 1 1 auto;
}

.glamor-1::placeholder,
[data-glamor-1]::placeholder,
.glamor-1[data-simulate-placeholder],
[data-glamor-1][data-simulate-placeholder] {
  color: #8e99ab;
  font-style: italic;
}

.glamor-1::-ms-input-placeholder,
[data-glamor-1]::-ms-input-placeholder,
.glamor-1[data-simulate-msinputplaceholder],
[data-glamor-1][data-simulate-msinputplaceholder] {
  color: #8e99ab;
  font-style: italic;
}

.glamor-1:-ms-input-placeholder,
[data-glamor-1]:-ms-input-placeholder,
.glamor-1[data-simulate-msinputplaceholder],
[data-glamor-1][data-simulate-msinputplaceholder] {
  color: #8e99ab;
  font-style: italic;
}

.glamor-1::-ms-clear,
[data-glamor-1]::-ms-clear,
.glamor-1[data-simulate-msclear],
[data-glamor-1][data-simulate-msclear] {
  display: none;
}

.glamor-1:focus ~ div:last-child,
[data-glamor-1]:focus ~ div:last-child,
.glamor-1[data-simulate-focus] ~ div:last-child,
[data-glamor-1][data-simulate-focus] ~ div:last-child {
  border-color: #c8d1e0;
  box-shadow: 0 0 0 1px #fff, 0 0 0 2px #2e6fd9;
}

.glamor-2,
[data-glamor-2] {
  background-color: #ebeff5;
  border-color: #c8d1e0;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: -1;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "DemoLayout": [Function],
            "FormField": [Function],
            "FormFieldset": [Function],
            "TextInput": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <FormFieldset
              disabled={true}
              legend="Login"
            >
              <FormFieldset
                disabled={true}
              >
                <fieldset
                  className="glamor-15"
                  disabled={true}
                >
                  <legend>
                    Login
                  </legend>
                  <glamorous(div)>
                    <div
                      className="glamor-14"
                    >
                      <FormField
                        label="Email"
                        requiredText="Required"
                      >
                        <FormField
                          className={undefined}
                        >
                          <div
                            className="glamor-6"
                          >
                            <label>
                              <glamorous(div)
                                hideLabel={undefined}
                                key="formField-3-textWrapper"
                              >
                                <div
                                  className="glamor-0"
                                >
                                  <span
                                    id="formField-3-labelText"
                                  >
                                    Email
                                  </span>
                                </div>
                              </glamorous(div)>
                              <TextInput
                                aria-describedby={undefined}
                                disabled={true}
                                key="formField-3-control"
                                required={undefined}
                                rootProps={undefined}
                                type="email"
                                variant={undefined}
                              >
                                <TextInput
                                  className={undefined}
                                  control={[Function]}
                                  controlProps={
                                    Object {
                                      "aria-describedby": undefined,
                                      "aria-invalid": undefined,
                                      "aria-required": undefined,
                                      "controlRef": undefined,
                                      "disabled": true,
                                      "readOnly": undefined,
                                      "required": undefined,
                                      "type": "email",
                                    }
                                  }
                                  disabled={true}
                                  iconEnd={undefined}
                                  iconStart={undefined}
                                  prefix={undefined}
                                  readOnly={undefined}
                                  size="large"
                                  suffix={undefined}
                                  variant={undefined}
                                >
                                  <FauxControl
                                    className="glamor-4"
                                    control={[Function]}
                                    controlProps={
                                      Object {
                                        "aria-describedby": undefined,
                                        "aria-invalid": undefined,
                                        "aria-required": undefined,
                                        "controlRef": undefined,
                                        "disabled": true,
                                        "readOnly": undefined,
                                        "required": undefined,
                                        "type": "email",
                                      }
                                    }
                                    disabled={true}
                                    iconEnd={undefined}
                                    iconStart={undefined}
                                    prefix={undefined}
                                    readOnly={undefined}
                                    size="large"
                                    suffix={undefined}
                                    variant={undefined}
                                  >
                                    <FauxControl
                                      className="glamor-4"
                                      control={[Function]}
                                      disabled={true}
                                      innerRef={undefined}
                                      variant={undefined}
                                    >
                                      <div
                                        className="glamor-3"
                                      >
                                        <glamorous(glamorous(input))
                                          aria-describedby={undefined}
                                          aria-invalid={undefined}
                                          aria-required={undefined}
                                          controlPropsIn={
                                            Object {
                                              "aria-describedby": undefined,
                                              "aria-invalid": undefined,
                                              "aria-required": undefined,
                                              "controlRef": undefined,
                                              "disabled": true,
                                              "readOnly": undefined,
                                              "required": undefined,
                                              "type": "email",
                                            }
                                          }
                                          controlRef={undefined}
                                          disabled={true}
                                          iconEnd={undefined}
                                          iconStart={undefined}
                                          innerRef={undefined}
                                          key="control"
                                          prefix={undefined}
                                          readOnly={undefined}
                                          required={undefined}
                                          size="large"
                                          suffix={undefined}
                                          type="email"
                                          variant={undefined}
                                        >
                                          <input
                                            aria-describedby={undefined}
                                            aria-invalid={undefined}
                                            aria-required={undefined}
                                            className="glamor-1"
                                            disabled={true}
                                            prefix={undefined}
                                            readOnly={undefined}
                                            required={undefined}
                                            size="large"
                                            type="email"
                                          />
                                        </glamorous(glamorous(input))>
                                        <Underlay
                                          disabled={true}
                                          readOnly={undefined}
                                          variant={undefined}
                                        >
                                          <div
                                            className="glamor-2"
                                            readOnly={undefined}
                                          />
                                        </Underlay>
                                      </div>
                                    </FauxControl>
                                  </FauxControl>
                                </TextInput>
                              </TextInput>
                            </label>
                          </div>
                        </FormField>
                      </FormField>
                      <FormField
                        label="Password"
                        requiredText="Required"
                      >
                        <FormField
                          className={undefined}
                        >
                          <div
                            className="glamor-6"
                          >
                            <label>
                              <glamorous(div)
                                hideLabel={undefined}
                                key="formField-4-textWrapper"
                              >
                                <div
                                  className="glamor-0"
                                >
                                  <span
                                    id="formField-4-labelText"
                                  >
                                    Password
                                  </span>
                                </div>
                              </glamorous(div)>
                              <TextInput
                                aria-describedby={undefined}
                                disabled={true}
                                key="formField-4-control"
                                required={undefined}
                                rootProps={undefined}
                                type="password"
                                variant={undefined}
                              >
                                <TextInput
                                  className={undefined}
                                  control={[Function]}
                                  controlProps={
                                    Object {
                                      "aria-describedby": undefined,
                                      "aria-invalid": undefined,
                                      "aria-required": undefined,
                                      "controlRef": undefined,
                                      "disabled": true,
                                      "readOnly": undefined,
                                      "required": undefined,
                                      "type": "password",
                                    }
                                  }
                                  disabled={true}
                                  iconEnd={undefined}
                                  iconStart={undefined}
                                  prefix={undefined}
                                  readOnly={undefined}
                                  size="large"
                                  suffix={undefined}
                                  variant={undefined}
                                >
                                  <FauxControl
                                    className="glamor-4"
                                    control={[Function]}
                                    controlProps={
                                      Object {
                                        "aria-describedby": undefined,
                                        "aria-invalid": undefined,
                                        "aria-required": undefined,
                                        "controlRef": undefined,
                                        "disabled": true,
                                        "readOnly": undefined,
                                        "required": undefined,
                                        "type": "password",
                                      }
                                    }
                                    disabled={true}
                                    iconEnd={undefined}
                                    iconStart={undefined}
                                    prefix={undefined}
                                    readOnly={undefined}
                                    size="large"
                                    suffix={undefined}
                                    variant={undefined}
                                  >
                                    <FauxControl
                                      className="glamor-4"
                                      control={[Function]}
                                      disabled={true}
                                      innerRef={undefined}
                                      variant={undefined}
                                    >
                                      <div
                                        className="glamor-3"
                                      >
                                        <glamorous(glamorous(input))
                                          aria-describedby={undefined}
                                          aria-invalid={undefined}
                                          aria-required={undefined}
                                          controlPropsIn={
                                            Object {
                                              "aria-describedby": undefined,
                                              "aria-invalid": undefined,
                                              "aria-required": undefined,
                                              "controlRef": undefined,
                                              "disabled": true,
                                              "readOnly": undefined,
                                              "required": undefined,
                                              "type": "password",
                                            }
                                          }
                                          controlRef={undefined}
                                          disabled={true}
                                          iconEnd={undefined}
                                          iconStart={undefined}
                                          innerRef={undefined}
                                          key="control"
                                          prefix={undefined}
                                          readOnly={undefined}
                                          required={undefined}
                                          size="large"
                                          suffix={undefined}
                                          type="password"
                                          variant={undefined}
                                        >
                                          <input
                                            aria-describedby={undefined}
                                            aria-invalid={undefined}
                                            aria-required={undefined}
                                            className="glamor-1"
                                            disabled={true}
                                            prefix={undefined}
                                            readOnly={undefined}
                                            required={undefined}
                                            size="large"
                                            type="password"
                                          />
                                        </glamorous(glamorous(input))>
                                        <Underlay
                                          disabled={true}
                                          readOnly={undefined}
                                          variant={undefined}
                                        >
                                          <div
                                            className="glamor-2"
                                            readOnly={undefined}
                                          />
                                        </Underlay>
                                      </div>
                                    </FauxControl>
                                  </FauxControl>
                                </TextInput>
                              </TextInput>
                            </label>
                          </div>
                        </FormField>
                      </FormField>
                    </div>
                  </glamorous(div)>
                </fieldset>
              </FormFieldset>
            </FormFieldset>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`FormFieldset demo examples rtl 1`] = `
.glamor-7,
[data-glamor-7] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
}

.glamor-7 *,
[data-glamor-7] *,
.glamor-7 *::before,
[data-glamor-7] *::before,
.glamor-7 *::after,
[data-glamor-7] *::after {
  box-sizing: inherit;
}

.glamor-0,
[data-glamor-0] {
  color: #58606e;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  font-size: 0.875em;
  font-weight: 600;
  justify-content: space-between;
  margin-bottom: 0.5em;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
}

.glamor-0 > *,
[data-glamor-0] > * {
  align-self: flex-end;
  display: inline-block;
  -webkit-align-self: flex-end;
}

.glamor-5,
[data-glamor-5] {
  align-items: center;
  cursor: text;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 100%;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-5 [role="img"],
[data-glamor-5] [role="img"] {
  display: block;
  fill: #c8d1e0;
  flex: 0 0 auto;
  margin: 0 0.5em;
  -webkit-flex: 0 0 auto;
}

.glamor-5 [role="img"]:last-of-type,
[data-glamor-5] [role="img"]:last-of-type {
  fill: #c8d1e0;
}

.glamor-4,
[data-glamor-4] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  position: relative;
  z-index: 1;
  align-items: center;
  cursor: text;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  width: 100%;
  -webkit-box-align: center;
  -webkit-align-items: center;
}

.glamor-4 *,
[data-glamor-4] *,
.glamor-4 *::before,
[data-glamor-4] *::before,
.glamor-4 *::after,
[data-glamor-4] *::after {
  box-sizing: inherit;
}

.glamor-4:hover > div:last-child,
[data-glamor-4]:hover > div:last-child,
.glamor-4[data-simulate-hover] > div:last-child,
[data-glamor-4][data-simulate-hover] > div:last-child {
  border-color: #2e6fd9;
}

.glamor-4:focus > div:last-child,
[data-glamor-4]:focus > div:last-child,
.glamor-4[data-simulate-focus] > div:last-child,
[data-glamor-4][data-simulate-focus] > div:last-child {
  border-color: #c8d1e0;
  box-shadow: 0 0 0 1px #fff, 0 0 0 2px #2e6fd9;
}

.glamor-4:active > div:last-child,
[data-glamor-4]:active > div:last-child,
.glamor-4[data-simulate-active] > div:last-child,
[data-glamor-4][data-simulate-active] > div:last-child {
  border-color: #c8d1e0;
  box-shadow: 0 0 0 1px #fff, 0 0 0 2px #2e6fd9;
}

.glamor-4 [role="img"],
[data-glamor-4] [role="img"] {
  display: block;
  fill: #c8d1e0;
  flex: 0 0 auto;
  margin: 0 0.5em;
  -webkit-flex: 0 0 auto;
}

.glamor-4 [role="img"]:last-of-type,
[data-glamor-4] [role="img"]:last-of-type {
  fill: #c8d1e0;
}

.glamor-3,
[data-glamor-3] {
  background-color: #fff;
  border-color: #c8d1e0;
  border-radius: 0.1875em;
  border-style: solid;
  border-width: 1px;
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  z-index: -1;
}

.glamor-8,
[data-glamor-8] {
  box-sizing: border-box;
  color: #333840;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  outline: 0;
  border: 1px solid transparent;
  border-top-color: #c8d1e0;
  padding: 0;
}

.glamor-8 *,
[data-glamor-8] *,
.glamor-8 *::before,
[data-glamor-8] *::before,
.glamor-8 *::after,
[data-glamor-8] *::after {
  box-sizing: inherit;
}

.glamor-8 > legend,
[data-glamor-8] > legend {
  color: #333840;
  font-size: 0.875em;
  font-weight: 700;
  line-height: 2em;
  padding: 0;
  padding-left: 0.5em;
}

.glamor-1,
[data-glamor-1] {
  fill: #8e99ab;
  font-size: 16px;
  height: 1.5em;
  transform: scaleX(-1);
  width: 1.5em;
  -webkit-transform: scaleX(-1);
}

.glamor-2,
[data-glamor-2] {
  background-color: transparent;
  border: 0;
  box-shadow: none;
  flex: 1 1 auto;
  font-family: inherit;
  min-width: 0;
  width: 100%;
  color: #58606e;
  font-size: 0.875em;
  height: 2.857142857142857em;
  outline: 0;
  padding-left: 1.1428571428571428em;
  padding-right: 0;
  -webkit-flex: 1 1 auto;
}

.glamor-2::placeholder,
[data-glamor-2]::placeholder,
.glamor-2[data-simulate-placeholder],
[data-glamor-2][data-simulate-placeholder] {
  color: #8e99ab;
  font-style: italic;
}

.glamor-2::-ms-input-placeholder,
[data-glamor-2]::-ms-input-placeholder,
.glamor-2[data-simulate-msinputplaceholder],
[data-glamor-2][data-simulate-msinputplaceholder] {
  color: #8e99ab;
  font-style: italic;
}

.glamor-2:-ms-input-placeholder,
[data-glamor-2]:-ms-input-placeholder,
.glamor-2[data-simulate-msinputplaceholder],
[data-glamor-2][data-simulate-msinputplaceholder] {
  color: #8e99ab;
  font-style: italic;
}

.glamor-2::-ms-clear,
[data-glamor-2]::-ms-clear,
.glamor-2[data-simulate-msclear],
[data-glamor-2][data-simulate-msclear] {
  display: none;
}

.glamor-2:focus ~ div:last-child,
[data-glamor-2]:focus ~ div:last-child,
.glamor-2[data-simulate-focus] ~ div:last-child,
[data-glamor-2][data-simulate-focus] ~ div:last-child {
  border-color: #c8d1e0;
  box-shadow: 0 0 0 1px #fff, 0 0 0 2px #2e6fd9;
}

<ThemeProvider>
  <ThemeProvider>
    <LiveProvider>
      <div
        className="react-live"
        scope={
          Object {
            "FormField": [Function],
            "FormFieldset": [Function],
            "IconBackspace": [Function],
            "TextInput": [Function],
            "ThemeProvider": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <div
              dir="rtl"
            >
              <ThemeProvider>
                <ThemeProvider>
                  <FormFieldset
                    legend="أسطورة"
                  >
                    <FormFieldset>
                      <fieldset
                        className="glamor-8"
                      >
                        <legend>
                          أسطورة
                        </legend>
                        <FormField
                          label="مرحبا بالعالم"
                          requiredText="Required"
                        >
                          <FormField
                            className={undefined}
                          >
                            <div
                              className="glamor-7"
                            >
                              <label>
                                <glamorous(div)
                                  hideLabel={undefined}
                                  key="formField-5-textWrapper"
                                >
                                  <div
                                    className="glamor-0"
                                  >
                                    <span
                                      id="formField-5-labelText"
                                    >
                                      مرحبا بالعالم
                                    </span>
                                  </div>
                                </glamorous(div)>
                                <TextInput
                                  aria-describedby={undefined}
                                  defaultValue="مرحبا بالعالم"
                                  iconStart={<IconBackspace />}
                                  key="formField-5-control"
                                  required={undefined}
                                  rootProps={undefined}
                                  variant={undefined}
                                >
                                  <TextInput
                                    className={undefined}
                                    control={[Function]}
                                    controlProps={
                                      Object {
                                        "aria-describedby": undefined,
                                        "aria-invalid": undefined,
                                        "aria-required": undefined,
                                        "controlRef": undefined,
                                        "defaultValue": "مرحبا بالعالم",
                                        "disabled": undefined,
                                        "readOnly": undefined,
                                        "required": undefined,
                                        "type": "text",
                                      }
                                    }
                                    disabled={undefined}
                                    iconEnd={undefined}
                                    iconStart={<IconBackspace />}
                                    prefix={undefined}
                                    readOnly={undefined}
                                    size="large"
                                    suffix={undefined}
                                    variant={undefined}
                                  >
                                    <FauxControl
                                      className="glamor-5"
                                      control={[Function]}
                                      controlProps={
                                        Object {
                                          "aria-describedby": undefined,
                                          "aria-invalid": undefined,
                                          "aria-required": undefined,
                                          "controlRef": undefined,
                                          "defaultValue": "مرحبا بالعالم",
                                          "disabled": undefined,
                                          "readOnly": undefined,
                                          "required": undefined,
                                          "type": "text",
                                        }
                                      }
                                      disabled={undefined}
                                      iconEnd={undefined}
                                      iconStart={<IconBackspace />}
                                      prefix={undefined}
                                      readOnly={undefined}
                                      size="large"
                                      suffix={undefined}
                                      variant={undefined}
                                    >
                                      <FauxControl
                                        className="glamor-5"
                                        control={[Function]}
                                        disabled={undefined}
                                        innerRef={undefined}
                                        variant={undefined}
                                      >
                                        <div
                                          className="glamor-4"
                                        >
                                          <IconBackspace
                                            key="iconStart"
                                            size="1.5em"
                                          >
                                            <Icon
                                              rtl={true}
                                              size="1.5em"
                                            >
                                              <glamorous(svg)
                                                aria-hidden={true}
                                                aria-labelledby={undefined}
                                                role="img"
                                                rtl={true}
                                                size="1.5em"
                                                viewBox="0 0 24 24"
                                              >
                                                <svg
                                                  aria-hidden={true}
                                                  aria-labelledby={undefined}
                                                  className="glamor-1"
                                                  role="img"
                                                  viewBox="0 0 24 24"
                                                >
                                                  <g>
                                                    <path
                                                      d="M22 3H7c-.69 0-1.23.35-1.59.88L0 12l5.41 8.11c.36.53.9.89 1.59.89h15c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-3 12.59L17.59 17 14 13.41 10.41 17 9 15.59 12.59 12 9 8.41 10.41 7 14 10.59 17.59 7 19 8.41 15.41 12 19 15.59z"
                                                    />
                                                  </g>
                                                </svg>
                                              </glamorous(svg)>
                                            </Icon>
                                          </IconBackspace>
                                          <glamorous(glamorous(input))
                                            aria-describedby={undefined}
                                            aria-invalid={undefined}
                                            aria-required={undefined}
                                            controlPropsIn={
                                              Object {
                                                "aria-describedby": undefined,
                                                "aria-invalid": undefined,
                                                "aria-required": undefined,
                                                "controlRef": undefined,
                                                "defaultValue": "مرحبا بالعالم",
                                                "disabled": undefined,
                                                "readOnly": undefined,
                                                "required": undefined,
                                                "type": "text",
                                              }
                                            }
                                            controlRef={undefined}
                                            defaultValue="مرحبا بالعالم"
                                            disabled={undefined}
                                            iconEnd={undefined}
                                            iconStart={<IconBackspace />}
                                            innerRef={undefined}
                                            key="control"
                                            prefix={undefined}
                                            readOnly={undefined}
                                            required={undefined}
                                            size="large"
                                            suffix={undefined}
                                            type="text"
                                            variant={undefined}
                                          >
                                            <input
                                              aria-describedby={undefined}
                                              aria-invalid={undefined}
                                              aria-required={undefined}
                                              className="glamor-2"
                                              defaultValue="مرحبا بالعالم"
                                              disabled={undefined}
                                              prefix={undefined}
                                              readOnly={undefined}
                                              required={undefined}
                                              size="large"
                                              type="text"
                                            />
                                          </glamorous(glamorous(input))>
                                          <Underlay
                                            disabled={undefined}
                                            readOnly={undefined}
                                            variant={undefined}
                                          >
                                            <div
                                              className="glamor-3"
                                              readOnly={undefined}
                                            />
                                          </Underlay>
                                        </div>
                                      </FauxControl>
                                    </FauxControl>
                                  </TextInput>
                                </TextInput>
                              </label>
                            </div>
                          </FormField>
                        </FormField>
                      </fieldset>
                    </FormFieldset>
                  </FormFieldset>
                </ThemeProvider>
              </ThemeProvider>
            </div>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;
